--- a/Development/BrumNgWebApp/BrumNgWebApp/ClientApp/package.json
+++ b/Development/BrumNgWebApp/BrumNgWebApp/ClientApp/package.json
@@ -28,7 +28,8 @@
     "bootstrap": "^3.4.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "handlebars": ">=4.3.0"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.0",
